--- a/app/sass/style.sass
+++ b/app/sass/style.sass
@@ -272,6 +272,7 @@ swiper-slide
     width: 100% 
     border: none 
     outline: none
+    font-family: 'DM Sans', sans-serif
 //end modal style 
 
 @import "media"
