--- a/app/sass/style.sass
+++ b/app/sass/style.sass
@@ -224,6 +224,9 @@ swiper-slide
     display: block
     border-radius: 50%
     margin-right: 21px
+    cursor: pointer
+label
+    cursor: pointer
 .input-radio
     display: none  
 .radio-wrapper
