--- a/app/sass/style.sass
+++ b/app/sass/style.sass
@@ -16,6 +16,9 @@ body
     max-width: 100%
     margin-left: auto 
     margin-right: auto
+    position: relative
+    min-height: 100vh
+    padding-bottom: 150px
 .container 
     padding-left: 24px 
     padding-right: 24px 
@@ -148,6 +151,9 @@ swiper-slide
     position: relative
     display: flex 
     justify-content: center
+    position: absolute 
+    bottom: 0
+    width: 100%
 .footer:before 
     content: ''
     width: 100% 
@@ -276,6 +282,7 @@ label
     border: none 
     outline: none
     font-family: 'DM Sans', sans-serif
+    font-size: 18px
 //end modal style 
 
 @import "media"
