buttons to bottom

--- a/app/sass/style.sass
+++ b/app/sass/style.sass
@@ -196,7 +196,8 @@ swiper-slide
         position: static
 .profile-header--answer:after 
     height: 22px
-.profile-content--answer 
+.profile-content--answer,
+.profile-content--answer form
     min-height: calc( 100vh - 150px )
     display: flex 
     flex-direction: column
