--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -13,8 +13,10 @@
 
 
 /* Small Devices, Tablets */
-@media only screen and (max-width : 768px)
+@media only screen and (max-width : 680px)
 	/**/
+	.photo__item
+		height: 50vw
 
 
 /* Extra Small Devices, Phones */
