--- a/app/sass/style.sass
+++ b/app/sass/style.sass
@@ -313,6 +313,8 @@ label
         border-radius: 4px
     .swiper-date
         margin-top: 6px
+.delite-photo
+    cursor: pointer
 @import "media"
 
 
