--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -17,6 +17,22 @@
 	/**/
 	.photo__item
 		height: 50vw
+	.photo-item
+		width: 30vw
+		height: 30vw
+		margin: 0.789vw
+		overflow: hidden
+	
+	.photo-item--big
+		width: 61.8vw
+		height: 61.8vw
+	.photo-item__wrap .photo-item
+		margin-bottom: 1.577vw
+	.photo-section
+		padding-left: 2vw
+		padding-right: 2vw
+	.plus-photo
+		width: 7vw
 
 
 /* Extra Small Devices, Phones */
