--- a/app/sass/style.sass
+++ b/app/sass/style.sass
@@ -315,6 +315,62 @@ label
         margin-top: 6px
 .delite-photo
     cursor: pointer
+.photo-section
+    padding-left: 14px 
+    padding-right: 14px
+.photo-wrapper
+    flex-wrap: wrap
+    display: flex
+.photo-item
+    width: 205px
+    height: 205px
+    border: 1px solid red
+    margin: 5px
+    background: #f8f7ff
+    border: none 
+    border-radius: 10px
+    display: flex 
+    justify-content: center 
+    align-items: center
+    position: relative
+
+.photo-item--big
+    width: 420px 
+    height: 420px 
+.photo-item__wrap
+    .photo-item 
+        margin-bottom: 10px
+        
+    .photo-item:last-child 
+        margin-bottom: 0
+.photo-item
+    overflow: hidden
+.photo-item__img 
+    width: 100%
+    min-width: 100%
+    height: 100% 
+    object-fit: cover 
+    object-position: center
+    position: relative
+    z-index: 9
+.plus-photo
+    width: 37px
+.delete-photo-item 
+    position: absolute
+    bottom: 10px
+    right: 10px
+    width: 10px
+    z-index: 10
+.delete-photo-item--big
+    width: 15px
+.photo-section
+    margin-bottom: 30px
+.photo-plus-wrapper
+    position: absolute 
+    top: 50% 
+    left: 50% 
+    transform: translateX(-50%) translateY(-50%)
+
 @import "media"
 
 
