--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -33,6 +33,21 @@
 		padding-right: 2vw
 	.plus-photo
 		width: 7vw
+	.add-video-button
+		height: 50px 
+		font-size: 18px
+	.photo__item
+		height: 33vw
+		width: 29vw
+	.photo__item
+		margin: 1vw 1vw
+	.photo-list__container
+		padding-left: 3vw 
+		padding-right: 3vw
+		margin-bottom: 5vw
+		.photo__item .swiper-date
+			margin-top: 0
+			font-size: 12px
 
 
 /* Extra Small Devices, Phones */
