--- a/app/sass/style.sass
+++ b/app/sass/style.sass
@@ -306,9 +306,9 @@ label
     display: flex 
     flex-wrap: wrap
 .photo__item 
-    width: 46% 
+    width: 29% 
     margin: 20px 2%
-    height: 350px
+    height: 200px
     img
         border-radius: 4px
     .swiper-date
@@ -370,7 +370,41 @@ label
     top: 50% 
     left: 50% 
     transform: translateX(-50%) translateY(-50%)
-
+.add-video-button
+    width: 97%
+    margin-left: auto 
+    margin-right: auto
+    display: flex 
+    justify-content: center 
+    align-items: center
+    text-decoration: none
+    height: 65px
+    font-size: 20px
+    border-radius: 50px 
+    margin-top: 30px
+.main-photo-wrapper
+    position: relative
+    width: 200px 
+    height: 200px 
+    border-radius: 50% 
+    background: #f8f7ff
+    margin-left: auto 
+    margin-right: auto
+    position: relative
+    z-index: 99
+.main-photo__footer
+    position: absolute 
+    bottom: 10px 
+    left: 50% 
+    transform: translateX(-50%)
+    z-index: 99
+.main-photo__footer
+    img 
+        max-width: 20px
+        max-height: 16px
+        margin: 0 5px
+    .delete-main-photo 
+        max-height: 14px
 @import "media"
 
 
