load more photo

--- a/app/sass/style.sass
+++ b/app/sass/style.sass
@@ -405,6 +405,8 @@ label
         margin: 0 5px
     .delete-main-photo 
         max-height: 14px
+.add-video-button
+    margin-bottom: 30px
 @import "media"
 
 
