--- a/app/sass/style.sass
+++ b/app/sass/style.sass
@@ -407,6 +407,34 @@ label
         max-height: 14px
 .add-video-button
     margin-bottom: 30px
+.photo-list
+    .slider-image
+        height: 100%
+.show-more
+    background: #f8f7ff
+    width: 100% 
+    height: 100% 
+    border-radius: 10px
+    display: flex 
+    justify-content: center 
+    align-items: center
+    color: #017df8 
+    font-weight: 600
+    text-decoration: none
+    img
+        margin-left: 5px
+        width: 20px
+.slider-image
+    height: 100%
+.title 
+    padding-left: 24px
+    font-size: 20px 
+    margin-bottom: 10px 
+    margin-top: 30px
+    font-weight: 700
+    color: #017df8 
+.title--stories
+    margin-top: 0
 @import "media"
 
 
