--- a/app/sass/style.sass
+++ b/app/sass/style.sass
@@ -283,6 +283,7 @@ label
     padding: 48px 12px 18px 12px
     border-radius: 13px
     text-align: center
+    max-width: 350px
     .profile-buttons 
         display: flex 
         justify-content: space-between
