--- a/app/sass/style.sass
+++ b/app/sass/style.sass
@@ -436,6 +436,13 @@ label
     color: #017df8 
 .title--stories
     margin-top: 0
+.photo__item,
+.photo__item:focus
+    outline: none
+    a 
+        display: block 
+        outline: none
+        height: 100%
 @import "media"
 
 
