--- a/app/sass/style.sass
+++ b/app/sass/style.sass
@@ -443,6 +443,18 @@ label
         display: block 
         outline: none
         height: 100%
+        width: 100%
+swiper-slide
+    a 
+        display: block 
+        outline: none
+        height: 100%
+.photo-item
+    a 
+        display: block 
+        width: 100% 
+        height: 100%
+    
 @import "media"
 
 
