--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -55,6 +55,13 @@
 	/**/
 	swiper-slide
 		height: 60.267vw
+	.delete-photo-item 
+		min-width: 20px
+		border-radius: 5px
+	.delete-photo-item--big
+		min-width: 25px
+		border-radius: 5px
+
 
 
 /* Custom, iPhone Retina */
