--- a/app/sass/style.sass
+++ b/app/sass/style.sass
@@ -371,6 +371,17 @@ label
     top: 50% 
     left: 50% 
     transform: translateX(-50%) translateY(-50%)
+    width: 100%
+    height: 100% 
+    display: flex
+    justify-content: center
+    align-items: center
+    label
+        width: 100% 
+        height: 100% 
+        display: flex
+        justify-content: center 
+        align-items: center
 .add-video-button
     width: 97%
     margin-left: auto 
@@ -454,7 +465,38 @@ swiper-slide
         display: block 
         width: 100% 
         height: 100%
-    
+.main-photo__footer
+    background: linear-gradient(180deg, #8A14F5 23.57%, #017DF8)
+    display: flex
+    justify-content: center 
+    align-items: center
+    height: 35px 
+    width: 35px
+    border-radius: 50%
+    img 
+        margin-left: 0 
+        margin-right: 0
+    label 
+        width: 100% 
+        height: 100%
+        display: flex
+        justify-content: center 
+        align-items: center  
+.delete-photo-item  
+    background: linear-gradient(180deg, #8A14F5 23.57%, #017DF8)
+    border-radius: 10px 
+    min-width: 25px 
+    display: flex 
+    justify-content: center 
+    align-items: center
+    padding: 6px 6px
+    bottom: 5px 
+    right: 5px
+.delete-photo-item--big
+    border-radius: 10px
+    min-width: 30px
+    padding: 6px 6px
+
 @import "media"
 
 
