--- a/app/sass/style.sass
+++ b/app/sass/style.sass
@@ -496,7 +496,13 @@ swiper-slide
     border-radius: 10px
     min-width: 30px
     padding: 6px 6px
-
+.modal-suc
+    display: block
+.close-btn
+    top: 15px 
+    right: 15px
+    position: absolute
+    cursor: pointer
 @import "media"
 
 
