--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -32,7 +32,8 @@
 		padding-left: 2vw
 		padding-right: 2vw
 	.plus-photo
-		width: 7vw
+		width: 9vw
+		padding: 2vw
 	.add-video-button
 		height: 50px 
 		font-size: 18px
@@ -48,6 +49,9 @@
 		.photo__item .swiper-date
 			margin-top: 0
 			font-size: 12px
+	.spinner
+		width: 9vw
+		height: 9vw
 
 
 /* Extra Small Devices, Phones */
