--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -52,6 +52,11 @@
 	.spinner
 		width: 9vw
 		height: 9vw
+	.photo-list__container
+		padding-top: 20px
+	.photo-list 
+		margin-bottom: 20px
+	
 
 
 /* Extra Small Devices, Phones */
