--- a/app/sass/style.sass
+++ b/app/sass/style.sass
@@ -145,7 +145,7 @@ swiper-slide
     background-repeat: no-repeat 
     background-position: left center
 .user-info__items
-    padding-bottom: 24px
+    padding-bottom: 12px
 .swiper-wrapper
     padding-bottom: 23px
 .questions-item
@@ -400,7 +400,7 @@ label
     height: 65px
     font-size: 20px
     border-radius: 50px 
-    margin-top: 30px
+    margin-top: 20px
 .main-photo-wrapper
     position: relative
     width: 200px 
@@ -526,6 +526,13 @@ swiper-slide
     display: none    
 .photo-item a + .delete-photo-item
     display: block
+.banner
+    margin-left: auto 
+    margin-right: auto
+    display: block
+    max-width: 100%
+.questions-list
+    padding-top: 20px
 @import "media"
 
 
