--- a/app/sass/style.sass
+++ b/app/sass/style.sass
@@ -533,6 +533,8 @@ swiper-slide
     max-width: 100%
 .questions-list
     padding-top: 20px
+.banner--margin 
+    margin-bottom: 20px
 @import "media"
 
 
