--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -56,9 +56,20 @@
 		padding-top: 20px
 	.photo-list 
 		margin-bottom: 20px
-	
+	.banner--photos
+		top: 109vw
 
 
+/* Extra Small Devices, Phones */
+@media only screen and (max-width : 600px)
+	/**/
+	.banner--photos
+		top: 109.5vw
+/* Extra Small Devices, Phones */
+@media only screen and (max-width : 600px)
+	/**/
+	.banner--photos
+		top: 110.3vw
 /* Extra Small Devices, Phones */
 @media only screen and (max-width : 480px)
 	/**/
@@ -70,9 +81,27 @@
 	.delete-photo-item--big
 		min-width: 25px
 		border-radius: 5px
-
-
-
+	.banner--photos
+		top: 110.7vw
+/* Extra Small Devices, Phones */
+@media only screen and (max-width : 450px)
+	/**/
+	.banner--photos
+		top: 111vw	
+/* Extra Small Devices, Phones */
+@media only screen and (max-width : 425px)
+	/**/
+	.banner--photos
+		top: 111.3vw	
+/* Extra Small Devices, Phones */
+@media only screen and (max-width : 400px)
+	/**/
+	.banner--photos
+		top: 112vw	
+@media only screen and (max-width : 375px)
+	/**/
+	.banner--photos
+		top: 112.5vw	
 /* Custom, iPhone Retina */
 @media only screen and (max-width : 320px)
 	/**/
