--- a/app/sass/style.sass
+++ b/app/sass/style.sass
@@ -535,6 +535,20 @@ swiper-slide
     padding-top: 20px
 .banner--margin 
     margin-bottom: 20px
+
+.photo-list__container
+    position: relative
+    overflow: hidden
+    .photo__item:nth-child(7)
+        margin-bottom: 120px
+
+.banner--photos
+    position: absolute 
+    top: 720px 
+    left: 50% 
+    transform: translateX(-50%)
+    z-index: 999
+
 @import "media"
 
 
