--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -56,20 +56,29 @@
 		padding-top: 20px
 	.photo-list 
 		margin-bottom: 20px
-	.banner--photos
-		top: 109vw
+	.photo-banner
+		margin-left: 20vw
+		margin-right: 20vw
+	/* .banner--photos
+		top: 109vw */
 
 
 /* Extra Small Devices, Phones */
 @media only screen and (max-width : 600px)
 	/**/
-	.banner--photos
-		top: 109.5vw
+	.photo-banner
+		margin-left: 18vw
+		margin-right: 18vw
+	/* .banner--photos
+		top: 109.5vw */
 /* Extra Small Devices, Phones */
-@media only screen and (max-width : 600px)
+@media only screen and (max-width : 530px)
 	/**/
-	.banner--photos
-		top: 110.3vw
+	.photo-banner
+		margin-left: 15vw
+		margin-right: 15vw
+	/* .banner--photos
+		top: 110.3vw */
 /* Extra Small Devices, Phones */
 @media only screen and (max-width : 480px)
 	/**/
@@ -81,27 +90,32 @@
 	.delete-photo-item--big
 		min-width: 25px
 		border-radius: 5px
-	.banner--photos
-		top: 110.7vw
+	.photo-banner
+		margin-left: auto
+		margin-right: auto
+		margin-top: 3vw 
+		margin-bottom: 3vw
+	/* .banner--photos
+		top: 110.7vw */
 /* Extra Small Devices, Phones */
 @media only screen and (max-width : 450px)
 	/**/
-	.banner--photos
-		top: 111vw	
+	/* .banner--photos
+		top: 111vw	 */
 /* Extra Small Devices, Phones */
 @media only screen and (max-width : 425px)
 	/**/
-	.banner--photos
-		top: 111.3vw	
+	/* .banner--photos
+		top: 111.3vw	 */
 /* Extra Small Devices, Phones */
 @media only screen and (max-width : 400px)
 	/**/
-	.banner--photos
-		top: 112vw	
+	/* .banner--photos
+		top: 112vw	 */
 @media only screen and (max-width : 375px)
 	/**/
-	.banner--photos
-		top: 112.5vw	
+	/* .banner--photos
+		top: 112.5vw	 */
 /* Custom, iPhone Retina */
 @media only screen and (max-width : 320px)
 	/**/
