--- a/app/sass/style.sass
+++ b/app/sass/style.sass
@@ -539,16 +539,20 @@ swiper-slide
 .photo-list__container
     position: relative
     overflow: hidden
-    .photo__item:nth-child(7)
-        margin-bottom: 120px
+    /* .photo__item:nth-child(7)
+        margin-bottom: 120px */
 
-.banner--photos
+/* .banner--photos
     position: absolute 
     top: 720px 
     left: 50% 
     transform: translateX(-50%)
-    z-index: 999
-
+    z-index: 999 */
+.photo-banner 
+    min-width: 320px
+    height: 100px
+    margin-left: 150px 
+    margin-right: 150px
 @import "media"
 
 
