--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -56,7 +56,7 @@
 		padding-top: 20px
 	.photo-list 
 		margin-bottom: 20px
-	.photo-banner
+	.banner__link--photo
 		margin-left: 20vw
 		margin-right: 20vw
 	/* .banner--photos
@@ -66,7 +66,7 @@
 /* Extra Small Devices, Phones */
 @media only screen and (max-width : 600px)
 	/**/
-	.photo-banner
+	.banner__link--photo
 		margin-left: 18vw
 		margin-right: 18vw
 	/* .banner--photos
@@ -74,7 +74,7 @@
 /* Extra Small Devices, Phones */
 @media only screen and (max-width : 530px)
 	/**/
-	.photo-banner
+	.banner__link--photo
 		margin-left: 15vw
 		margin-right: 15vw
 	/* .banner--photos
@@ -90,11 +90,14 @@
 	.delete-photo-item--big
 		min-width: 25px
 		border-radius: 5px
-	.photo-banner
+	.banner__link--photo
 		margin-left: auto
 		margin-right: auto
 		margin-top: 3vw 
 		margin-bottom: 3vw
+		max-width: 100%
+		min-width: 272px
+	
 	/* .banner--photos
 		top: 110.7vw */
 /* Extra Small Devices, Phones */
