--- a/app/sass/style.sass
+++ b/app/sass/style.sass
@@ -548,11 +548,17 @@ swiper-slide
     left: 50% 
     transform: translateX(-50%)
     z-index: 999 */
-.photo-banner 
+.banner__link--photo
     min-width: 320px
     height: 100px
     margin-left: 150px 
     margin-right: 150px
+.banner__link
+    display: block 
+    margin-left: auto 
+    margin-right: auto
+    width: 320px 
+    max-width: 100%
 @import "media"
 
 
