remove class from banner img

--- a/app/sass/style.sass
+++ b/app/sass/style.sass
@@ -526,14 +526,14 @@ swiper-slide
     display: none    
 .photo-item a + .delete-photo-item
     display: block
-.banner
+.banner__link img
     margin-left: auto 
     margin-right: auto
     display: block
     max-width: 100%
 .questions-list
     padding-top: 20px
-.banner--margin 
+.banner__link--margin 
     margin-bottom: 20px
 
 .photo-list__container
