--- a/app/sass/style.sass
+++ b/app/sass/style.sass
@@ -308,10 +308,10 @@ label
     flex-wrap: wrap
 .photo__item 
     width: 29% 
-    margin: 20px 2%
-    height: 200px
+    margin: 2% 2%
+    height: 183.8px
     img
-        border-radius: 4px
+        border-radius: 10px
     .swiper-date
         margin-top: 6px
 .delite-photo
