--- a/app/sass/style.sass
+++ b/app/sass/style.sass
@@ -559,6 +559,23 @@ swiper-slide
     margin-right: auto
     width: 320px 
     max-width: 100%
+//start msg btn
+.send-msg
+    width: 60px 
+    height: 60px
+    background: #fff 
+    border-radius: 50% 
+    box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.25)
+    position: fixed 
+    right: 10px 
+    bottom: 10px 
+    z-index: 999
+    display: flex 
+    justify-content: center 
+    align-items: center
+    cursor: pointer
+//end msg btn
+
 @import "media"
 
 
