--- a/app/sass/style.sass
+++ b/app/sass/style.sass
@@ -561,9 +561,9 @@ swiper-slide
     max-width: 100%
 //start msg btn
 .send-msg
-    width: 60px 
-    height: 60px
-    background: #fff 
+    width: 80px 
+    height: 80px
+    background: linear-gradient(180deg, #017DF8 -75.72%, #8A14F5 84.77%) 
     border-radius: 50% 
     box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.25)
     position: fixed 
@@ -574,6 +574,16 @@ swiper-slide
     justify-content: center 
     align-items: center
     cursor: pointer
+    img 
+        width: 40px
+.send-msg-wrapper
+    width: 73px 
+    height: 73px 
+    display: flex 
+    justify-content: center 
+    align-items: center 
+    background: #fff
+    border-radius: 50%
 //end msg btn
 
 @import "media"
