--- a/app/sass/style.sass
+++ b/app/sass/style.sass
@@ -386,6 +386,9 @@ label
         justify-content: center 
         align-items: center
 .main-photo-wrapper
+    display: flex 
+    justify-content: center
+    align-items: center
     .photo-plus-wrapper
         label
             background: transparent
