--- a/app/sass/style.sass
+++ b/app/sass/style.sass
@@ -588,7 +588,12 @@ swiper-slide
     background: #fff
     border-radius: 50%
 //end msg btn
-
+.profile-photo
+    position: absolute 
+    z-index: 99 
+    top: 50%
+    left: 50%
+    transform: translateY(-50%) translateX(-50%)
 @import "media"
 
 
