--- a/app/sass/style.sass
+++ b/app/sass/style.sass
@@ -587,13 +587,12 @@ swiper-slide
     align-items: center 
     background: #fff
     border-radius: 50%
-//end msg btn
-.profile-photo
-    position: absolute 
-    z-index: 99 
-    top: 50%
-    left: 50%
-    transform: translateY(-50%) translateX(-50%)
+.main-photo-wrapper
+    position: relative
+    .spinner
+        position: absolute 
+        top: 38% 
+        left: 38%
 @import "media"
 
 
