--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -59,6 +59,10 @@
 	.banner__link--photo
 		margin-left: 20vw
 		margin-right: 20vw
+	.main-photo-wrapper
+		.spinner
+			width: 50px 
+			height: 50px
 	/* .banner--photos
 		top: 109vw */
 
