--- a/app/sass/style.sass
+++ b/app/sass/style.sass
@@ -593,6 +593,79 @@ swiper-slide
         position: absolute 
         top: 38% 
         left: 38%
+.input-choose
+  position: absolute
+  top: 0
+  left: 0
+.cropped-photo-container img
+    width: 100%
+.cropper
+    max-width: 100% !important
+    height: auto !important
+    max-height: calc(100vh - 80px)
+.cropped-photo-container
+    min-height: calc(100vh - 80px)
+    background: #000
+    padding-left: 20px
+    padding-right: 20px
+    padding-top: 20px
+    padding-bottom: 20px
+    display: -webkit-box
+    display: -ms-flexbox
+    display: flex
+    -webkit-box-align: center
+    -ms-flex-align: center
+    align-items: center
+    -webkit-box-pack: center
+    -ms-flex-pack: center
+    justify-content: center
+.crop-footer
+    display: -webkit-box
+    display: -ms-flexbox
+    display: flex
+    -webkit-box-pack: justify
+    -ms-flex-pack: justify
+    justify-content: space-between
+    -webkit-box-align: center
+    -ms-flex-align: center
+    align-items: center
+    padding: 0 20px
+    box-sizing: border-box
+    position: fixed
+    z-index: 999
+    bottom: 0px
+    left: 0
+    width: 100%
+    background: #000
+    padding-bottom: 20px
+    padding-top: 21px
+.crop-cancel, .crop-button
+    height: 60px
+.crop-cancel svg
+    width: 80%
+    max-height: 80%
+.crop-button
+    svg
+        width: 80%
+        max-height: 80%
+        background: #157bd3
+        color: #fff
+        border: none
+        outline: none
+        width: 60px
+        border-radius: 50%
+        font-weight: 500
+        text-align: center
+        background: linear-gradient(180deg, #8A14F5 23.57%, #017DF8)
+.crop-cancel
+    background: #fff
+    color: #000
+    border: none
+    outline: none
+    width: 60px
+    border-radius: 50%
+    font-weight: 500
+    text-align: center
 @import "media"
 
 
