--- a/app/sass/style.sass
+++ b/app/sass/style.sass
@@ -223,18 +223,18 @@ swiper-slide
     display: flex 
     justify-content: space-between
     align-items: center
-.button 
-    background: #F2F2F2
-    border-radius: 8px
-    width: 48%
-    height: 56px
-    display: flex 
-    justify-content: center 
-    align-items: center
-    text-decoration: none
-    color: #323235
-    font-weight: 700 
-    font-size: 18px
+// .button 
+//     background: #F2F2F2
+//     border-radius: 8px
+//     width: 48%
+//     height: 56px
+//     display: flex 
+//     justify-content: center 
+//     align-items: center
+//     text-decoration: none
+//     color: #323235
+//     font-weight: 700 
+//     font-size: 18px
 .button--blue 
     background: #017DF8
     color: #fff
@@ -666,6 +666,45 @@ swiper-slide
     border-radius: 50%
     font-weight: 500
     text-align: center
+.like-button
+    background: #21BB31
+.like-wrapper
+    position: fixed 
+    bottom: 0 
+    left: 0
+    width: 100%
+    padding-left: 15px 
+    padding-right: 15px 
+    padding-bottom: 15px
+    z-index: 999 
+    background: #fff
+    display: flex
+    flex-direction: column
+    align-items: center
+.like-button
+    display: flex
+    justify-content: center 
+    align-items: center
+    width: 100% 
+    padding-top: 10px 
+    padding-bottom: 10px 
+    border-radius: 40px
+    img 
+        width: 30px
+.cancel
+    color: #bbbbbb
+    margin-top: 20px
+    padding-bottom: 2px 
+    padding-left: 4px 
+    padding-right: 4px
+    font-weight: 500
+    border-bottom: 1px solid #bbbbbb
+    display: inline-block
+.cancel--profile
+    text-align: center
+    margin-top: 10px
+    margin-left: auto
+    margin-right: auto
 @import "media"
 
 
