--- a/app/sass/style.sass
+++ b/app/sass/style.sass
@@ -673,14 +673,18 @@ swiper-slide
     bottom: 0 
     left: 0
     width: 100%
+    padding-top: 15px
     padding-left: 15px 
     padding-right: 15px 
     padding-bottom: 15px
     z-index: 999 
-    background: #fff
+    background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, #FFFFFF 80%)
     display: flex
     flex-direction: column
     align-items: center
+/* Rectangle 4 */
+
+
 .like-button
     display: flex
     justify-content: center 
@@ -692,13 +696,13 @@ swiper-slide
     img 
         width: 30px
 .cancel
-    color: #bbbbbb
+    color: #949393
     margin-top: 20px
     padding-bottom: 2px 
     padding-left: 4px 
     padding-right: 4px
     font-weight: 500
-    border-bottom: 1px solid #bbbbbb
+    border-bottom: 1px solid #949393
     display: inline-block
 .cancel--profile
     text-align: center
