--- a/app/sass/style.sass
+++ b/app/sass/style.sass
@@ -709,7 +709,19 @@ swiper-slide
     margin-top: 10px
     margin-left: auto
     margin-right: auto
+.header-logo
+    position: static
+.profile-top__header
+    display: flex 
+    align-items: center
+    padding-left: 20px
+.close-profile
+    width: 20px
+    margin-right: 10px
+    cursor: pointer
+  
 @import "media"
+
 
 
 
