--- a/app/sass/style.sass
+++ b/app/sass/style.sass
@@ -306,6 +306,8 @@ label
 .photo-list
     display: flex 
     flex-wrap: wrap
+    margin-left: -2% 
+    margin-right: -2%
 .photo__item 
     width: 29% 
     margin: 2% 2%
