--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -38,13 +38,12 @@
 		height: 50px 
 		font-size: 18px
 	.photo__item
-		height: 29vw
-		width: 29vw
-	.photo__item
-		margin: 1vw 1vw
+		height: 27vw
+		width: 31.3%
+		margin: 1% 1%
 	.photo-list__container
-		padding-left: 3vw 
-		padding-right: 3vw
+		padding-left: 24px 
+		padding-right: 24px
 		margin-bottom: 5vw
 		.photo__item .swiper-date
 			margin-top: 0
@@ -63,8 +62,29 @@
 		.spinner
 			width: 50px 
 			height: 50px
+	.profile-header
+		padding-top: 13px
 	/* .banner--photos
 		top: 109vw */
+	.photo-section 
+		padding-left: 24px 
+		padding-right: 24px
+		.photo-item
+			margin: 1%
+	.photo-item
+		width: 31.3%
+		height: 29vw
+	.photo-item--big
+		width: 65%
+		height: 59vw
+	.photo-item__wrap
+		width: 31.3%
+		.photo-item
+			width: 100%
+			margin-bottom: 4%
+
+
+
 
 
 /* Extra Small Devices, Phones */
@@ -101,6 +121,9 @@
 		margin-bottom: 3vw
 		max-width: 100%
 		min-width: 272px
+	.photo-list
+		margin-left: auto 
+		margin-right: auto
 	
 	/* .banner--photos
 		top: 110.7vw */
