--- a/app/sass/style.sass
+++ b/app/sass/style.sass
@@ -280,13 +280,29 @@ label
     left: 50%
     transform: translateY(-50%) translateX(-50%)
     width: 90%
-    padding: 48px 12px 18px 12px
+    padding: 30px 12px 30px 12px
     border-radius: 13px
     text-align: center
     max-width: 350px
+    .button 
+        display: flex
+        width: 48%
+        justify-content: center
+        align-items: center
+        height: 40px
+        border-radius: 50px
+        color: #787777
+        border: 1px solid #787777
+        cursor: pointer
     .profile-buttons 
         display: flex 
         justify-content: space-between
+    .button--red
+        color: rgb(255, 255, 255)
+        border: none
+    .modal-title
+        margin-bottom: 30px
+        color: var(--tg-theme-text-color)
 .modal-title 
     font-size: 28px 
     font-weight: 700
@@ -363,12 +379,33 @@ label
     border-radius: 50%
 .delete-photo-item 
     position: absolute
-    bottom: 10px
-    right: 10px
-    width: 10px
-    z-index: 10
+    bottom: 0px
+    right: 0px
+    z-index: 10 
+    display: flex 
+    justify-content: center 
+    align-items: center
+    padding: 5px 5px
+    bottom: 5px 
+    right: 5px
+    cursor: pointer
+    img 
+        position: relative
+        top: 1px
+.delete-photo-item__wrapper
+    background: linear-gradient(180deg, #8A14F5 23.57%, #017DF8)
+    border-radius: 5px
+    padding: 3.5px 8px
+    img 
+        height: 14px
 .delete-photo-item--big
-    width: 15px
+    border-radius: 10px
+    .delete-photo-item__wrapper
+        padding: 7px 10px
+        border-radius: 10px
+        img 
+            height: 20px
+
 .photo-section
     margin-bottom: 30px
 .photo-plus-wrapper
@@ -494,20 +531,9 @@ swiper-slide
         display: flex
         justify-content: center 
         align-items: center  
-.delete-photo-item  
-    background: linear-gradient(180deg, #8A14F5 23.57%, #017DF8)
-    border-radius: 10px 
-    min-width: 25px 
-    display: flex 
-    justify-content: center 
-    align-items: center
-    padding: 6px 6px
-    bottom: 5px 
-    right: 5px
-.delete-photo-item--big
-    border-radius: 10px
-    min-width: 30px
-    padding: 6px 6px
+
+    
+
 .modal-suc
     display: block
 .close-btn
@@ -527,8 +553,7 @@ swiper-slide
         transform: rotate(0deg)
     100%
         transform: rotate(360deg)
-.delete-photo-item
-    display: none    
+   
 .photo-item a + .delete-photo-item
     display: block
 .banner__link img
@@ -544,6 +569,7 @@ swiper-slide
 .photo-list__container
     position: relative
     overflow: hidden
+    
     /* .photo__item:nth-child(7)
         margin-bottom: 120px */
 
@@ -647,6 +673,11 @@ swiper-slide
     width: 80%
     max-height: 80%
 .crop-button
+    height: 60px
+    border-radius: 50%
+    width: 60px
+    padding: 0
+    border: none
     svg
         width: 80%
         max-height: 80%
@@ -658,6 +689,9 @@ swiper-slide
         border-radius: 50%
         font-weight: 500
         text-align: center
+        max-height: 100%
+        height: 100%
+        padding: 15px
         background: linear-gradient(180deg, #8A14F5 23.57%, #017DF8)
 .crop-cancel
     background: #fff
@@ -721,7 +755,11 @@ swiper-slide
     width: 20px
     margin-right: 10px
     cursor: pointer
-  
+.profile-content
+    background: #fff
+.close-profile
+    padding-top: 10px 
+    padding-bottom: 10px
 @import "media"
 
 
