--- a/app/sass/style.sass
+++ b/app/sass/style.sass
@@ -11,6 +11,7 @@ body
     font-size: 16px
     font-weight: 400
     color: #323235
+
 .content
     width: 680px
     max-width: 100%
@@ -19,6 +20,7 @@ body
     position: relative
     min-height: 100vh
     padding-bottom: 150px
+    background: #fff
 .container 
     padding-left: 24px 
     padding-right: 24px 
@@ -66,7 +68,7 @@ swiper-slide
 
 //start profile-header style
 .profile-header
-    padding-top: 23px 
+    padding-top: 55px 
     padding-bottom: 21px
     background: linear-gradient(180deg, #017DF8 -75.72%, #8A14F5 84.77%)
     position: relative
@@ -163,7 +165,7 @@ swiper-slide
 //start footer style
 .footer 
     padding-top: 69px 
-    padding-bottom: 25px 
+    padding-bottom: 85px 
     background: linear-gradient(180deg, #8A14F5 23.57%, #017DF8 186.94%)
     position: relative
     display: flex 
@@ -382,13 +384,13 @@ label
     bottom: 0px
     right: 0px
     z-index: 10 
-    display: flex 
     justify-content: center 
     align-items: center
     padding: 5px 5px
     bottom: 5px 
     right: 5px
     cursor: pointer
+    display: none
     img 
         position: relative
         top: 1px
@@ -569,6 +571,7 @@ swiper-slide
 .photo-list__container
     position: relative
     overflow: hidden
+    
     
     /* .photo__item:nth-child(7)
         margin-bottom: 120px */
@@ -751,6 +754,7 @@ swiper-slide
     display: flex 
     align-items: center
     padding-left: 20px
+    padding-bottom: 35px
 .close-profile
     width: 20px
     margin-right: 10px
@@ -760,6 +764,11 @@ swiper-slide
 .close-profile
     padding-top: 10px 
     padding-bottom: 10px
+.button--fixed
+    width: 100%
+    max-width: 590px
+
+
 @import "media"
 
 
