--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -44,7 +44,7 @@
 	.photo-list__container
 		padding-left: 24px 
 		padding-right: 24px
-		margin-bottom: 5vw
+		margin-bottom: 0
 		.photo__item .swiper-date
 			margin-top: 0
 			font-size: 12px
